Fix align vl right

--- a/assets/css/boxes/_item.scss
+++ b/assets/css/boxes/_item.scss
@@ -231,7 +231,7 @@
 .box__icon--bottom + *:not(.box__block, .box__button:last-child) {
   margin-top: calc(-.5 * var(--box-gap));
 }
-svg.box__icon--top:where(.align-center *, :not(:is(.align-left, .align-right) *)) {
+svg.box__icon--top:where(.align-center *, :not(:is(.align-left, .align-right, .align--vl-left, .align--vl-right) *)) {
   width: 100%;
 }
 .box__icon--top {
